peg.js
Peg = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "start": parse_start,
        "initializer": parse_initializer,
        "whitespace": parse_whitespace,
        "_": parse__,
        "newline": parse_newline,
        "symbol": parse_symbol,
        "goalnodes": parse_goalnodes,
        "contextnodes": parse_contextnodes,
        "contextnode": parse_contextnode,
        "contextnode_": parse_contextnode_,
        "evidencenode": parse_evidencenode,
        "evidencenode_": parse_evidencenode_,
        "evidencenodes": parse_evidencenodes,
        "strategynode": parse_strategynode,
        "strategynode_": parse_strategynode_,
        "goalnode": parse_goalnode,
        "goalnode_": parse_goalnode_,
        "annotations": parse_annotations,
        "annotationparam": parse_annotationparam,
        "annotation": parse_annotation,
        "goalbody": parse_goalbody,
        "description": parse_description,
        "singleline": parse_singleline,
        "notes": parse_notes,
        "note": parse_note,
        "notesubject": parse_notesubject,
        "notedescription": parse_notedescription,
        "notebody": parse_notebody,
        "tabindent": parse_tabindent,
        "notekeyvalues": parse_notekeyvalues,
        "notekeyvalue": parse_notekeyvalue,
        "key": parse_key,
        "value": parse_value,
        "nodedepth": parse_nodedepth,
        "labelnum": parse_labelnum,
        "goal": parse_goal,
        "goal_": parse_goal_,
        "context": parse_context,
        "context_": parse_context_,
        "strategy": parse_strategy,
        "strategy_": parse_strategy_,
        "evidence": parse_evidence,
        "evidence_": parse_evidence_
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = pos;
        result0 = parse_initializer();
        if (result0 !== null) {
          result1 = parse_goalnode();
          if (result1 !== null) {
            result2 = parse_whitespace();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          result0 = parse_initializer();
          if (result0 !== null) {
            result1 = parse_contextnode();
            if (result1 !== null) {
              result2 = parse_whitespace();
              if (result2 !== null) {
                result0 = [result0, result1, result2];
              } else {
                result0 = null;
                pos = pos0;
              }
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
          if (result0 === null) {
            pos0 = pos;
            result0 = parse_initializer();
            if (result0 !== null) {
              result1 = parse_strategynode();
              if (result1 !== null) {
                result2 = parse_whitespace();
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos0;
                }
              } else {
                result0 = null;
                pos = pos0;
              }
            } else {
              result0 = null;
              pos = pos0;
            }
            if (result0 === null) {
              pos0 = pos;
              result0 = parse_initializer();
              if (result0 !== null) {
                result1 = parse_evidencenode();
                if (result1 !== null) {
                  result2 = parse_whitespace();
                  if (result2 !== null) {
                    result0 = [result0, result1, result2];
                  } else {
                    result0 = null;
                    pos = pos0;
                  }
                } else {
                  result0 = null;
                  pos = pos0;
                }
              } else {
                result0 = null;
                pos = pos0;
              }
            }
          }
        }
        return result0;
      }
      
      function parse_initializer() {
        var result0;
        var pos0;
        
        pos0 = pos;
        result0 = "";
        if (result0 !== null) {
          result0 = (function(offset) {
        		_PEG = {
        			CaseType: {
        				G: "Goal",
        				C: "Context",
        				S: "Strategy",
        				E: "Evidence",
        			},
        
        			Case: function() {
        				/* TODO */
        			},
        
        			CaseModel: function(Label, Case, Parent, Type, Annotations, Statement, Notes) {
        				this.Case = Case;
        				this.Parent = Parent;
        				this.Type = Type;
        				this.Label = Label;
        				this.Statement = Statement;
        				this.Children = [];
        				this.Annotations = Annotations;
        				this.Notes = Notes;
        				this.x = 0;
        				this.y = 0;
        			},
        			CaseNote: function(Name, Body) {
        				this.Name = Name;
        				this.Body = Body;
        			},
        			currentParsingLevel: 1,
        		};
        		return "";
        	})(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_whitespace() {
        var result0, result1;
        
        result0 = [];
        result1 = parse__();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse__();
        }
        return result0;
      }
      
      function parse__() {
        var result0;
        
        if (/^[ \t\r]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[ \\t\\r]");
          }
        }
        return result0;
      }
      
      function parse_newline() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        if (/^[\n]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[\\n]");
          }
        }
        if (result0 !== null) {
          result1 = [];
          pos1 = pos;
          result2 = [];
          if (/^[ \t]/.test(input.charAt(pos))) {
            result3 = input.charAt(pos);
            pos++;
          } else {
            result3 = null;
            if (reportFailures === 0) {
              matchFailed("[ \\t]");
            }
          }
          while (result3 !== null) {
            result2.push(result3);
            if (/^[ \t]/.test(input.charAt(pos))) {
              result3 = input.charAt(pos);
              pos++;
            } else {
              result3 = null;
              if (reportFailures === 0) {
                matchFailed("[ \\t]");
              }
            }
          }
          if (result2 !== null) {
            if (/^[\n]/.test(input.charAt(pos))) {
              result3 = input.charAt(pos);
              pos++;
            } else {
              result3 = null;
              if (reportFailures === 0) {
                matchFailed("[\\n]");
              }
            }
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos1;
            }
          } else {
            result2 = null;
            pos = pos1;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos1 = pos;
            result2 = [];
            if (/^[ \t]/.test(input.charAt(pos))) {
              result3 = input.charAt(pos);
              pos++;
            } else {
              result3 = null;
              if (reportFailures === 0) {
                matchFailed("[ \\t]");
              }
            }
            while (result3 !== null) {
              result2.push(result3);
              if (/^[ \t]/.test(input.charAt(pos))) {
                result3 = input.charAt(pos);
                pos++;
              } else {
                result3 = null;
                if (reportFailures === 0) {
                  matchFailed("[ \\t]");
                }
              }
            }
            if (result2 !== null) {
              if (/^[\n]/.test(input.charAt(pos))) {
                result3 = input.charAt(pos);
                pos++;
              } else {
                result3 = null;
                if (reportFailures === 0) {
                  matchFailed("[\\n]");
                }
              }
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos1;
              }
            } else {
              result2 = null;
              pos = pos1;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_symbol() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        if (/^[0-9a-z]/i.test(input.charAt(pos))) {
          result1 = input.charAt(pos);
          pos++;
        } else {
          result1 = null;
          if (reportFailures === 0) {
            matchFailed("[0-9a-z]i");
          }
        }
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            if (/^[0-9a-z]/i.test(input.charAt(pos))) {
              result1 = input.charAt(pos);
              pos++;
            } else {
              result1 = null;
              if (reportFailures === 0) {
                matchFailed("[0-9a-z]i");
              }
            }
          }
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result1 = [];
          if (/^[0-9a-z.]/i.test(input.charAt(pos))) {
            result2 = input.charAt(pos);
            pos++;
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("[0-9a-z.]i");
            }
          }
          while (result2 !== null) {
            result1.push(result2);
            if (/^[0-9a-z.]/i.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[0-9a-z.]i");
              }
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, symbol) { return symbol[0].join("") + symbol[1].join(""); })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_goalnodes() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = (function(offset) { _PEG.currentParsingLevel += 1; return true; })(pos) ? "" : null;
        if (result0 !== null) {
          result1 = parse_goalnode();
          if (result1 !== null) {
            result2 = [];
            pos2 = pos;
            result3 = parse_newline();
            result3 = result3 !== null ? result3 : "";
            if (result3 !== null) {
              result4 = parse_goalnode();
              if (result4 !== null) {
                result3 = [result3, result4];
              } else {
                result3 = null;
                pos = pos2;
              }
            } else {
              result3 = null;
              pos = pos2;
            }
            while (result3 !== null) {
              result2.push(result3);
              pos2 = pos;
              result3 = parse_newline();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result4 = parse_goalnode();
                if (result4 !== null) {
                  result3 = [result3, result4];
                } else {
                  result3 = null;
                  pos = pos2;
                }
              } else {
                result3 = null;
                pos = pos2;
              }
            }
            if (result2 !== null) {
              result3 = (function(offset, head, tail) { _PEG.currentParsingLevel -= 1; return true; })(pos, result1, result2) ? "" : null;
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, head, tail) {
        		var res = [head];
        		for (var i in tail) {
        			res.push(tail[i][1]);
        		}
        		return res;
        	})(pos0, result0[1], result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          result0 = (function(offset) { _PEG.currentParsingLevel -= 1; return true; })(pos) ? "" : null;
        }
        return result0;
      }
      
      function parse_contextnodes() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_contextnode();
        if (result0 !== null) {
          result1 = [];
          pos2 = pos;
          result2 = parse_newline();
          result2 = result2 !== null ? result2 : "";
          if (result2 !== null) {
            result3 = parse_contextnode();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos2;
            }
          } else {
            result2 = null;
            pos = pos2;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos2 = pos;
            result2 = parse_newline();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_contextnode();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos2;
              }
            } else {
              result2 = null;
              pos = pos2;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, head, tail) {
        		var res = [head];
        		for (var i in tail) {
        			res.push(tail[i][1]);
        		}
        		return res;
        	})(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_contextnode() {
        var result0;
        var pos0;
        
        pos0 = pos;
        result0 = parse_contextnode_();
        if (result0 !== null) {
          result0 = (function(offset, node) { return node; })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_contextnode_() {
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_nodedepth();
        if (result0 !== null) {
          result1 = (function(offset, depth) { return depth == _PEG.currentParsingLevel; })(pos, result0) ? "" : null;
          if (result1 !== null) {
            result2 = parse_whitespace();
            if (result2 !== null) {
              result3 = parse_context();
              if (result3 !== null) {
                result4 = parse_whitespace();
                if (result4 !== null) {
                  result5 = parse_annotations();
                  result5 = result5 !== null ? result5 : "";
                  if (result5 !== null) {
                    pos2 = pos;
                    result6 = parse_newline();
                    if (result6 !== null) {
                      result7 = parse_goalbody();
                      if (result7 !== null) {
                        result6 = [result6, result7];
                      } else {
                        result6 = null;
                        pos = pos2;
                      }
                    } else {
                      result6 = null;
                      pos = pos2;
                    }
                    result6 = result6 !== null ? result6 : "";
                    if (result6 !== null) {
                      result0 = [result0, result1, result2, result3, result4, result5, result6];
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, depth, context, anno, body) {
        		var desc = (body == "") ? "" : body[1].desc;
        		var notes = (body == "") ? "" : body[1].notes;
        		return new _PEG.CaseModel(context, null, null, _PEG.CaseType[context[0]], anno, desc, notes);
        	})(pos0, result0[0], result0[3], result0[5], result0[6]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_evidencenode() {
        var result0, result1, result2;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_evidencenode_();
        if (result0 !== null) {
          pos2 = pos;
          result1 = parse_newline();
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result2 = parse_contextnodes();
            if (result2 !== null) {
              result1 = [result1, result2];
            } else {
              result1 = null;
              pos = pos2;
            }
          } else {
            result1 = null;
            pos = pos2;
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, node, contextnodes) {
        		node.Children = node.Children.concat(contextnodes[1]);
        		return node;
        	})(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          result0 = parse_evidencenode_();
          if (result0 !== null) {
            result0 = (function(offset, node) { return node; })(pos0, result0);
          }
          if (result0 === null) {
            pos = pos0;
          }
        }
        return result0;
      }
      
      function parse_evidencenode_() {
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_nodedepth();
        if (result0 !== null) {
          result1 = (function(offset, depth) { return depth == _PEG.currentParsingLevel; })(pos, result0) ? "" : null;
          if (result1 !== null) {
            result2 = parse_whitespace();
            if (result2 !== null) {
              result3 = parse_evidence();
              if (result3 !== null) {
                result4 = parse_whitespace();
                if (result4 !== null) {
                  result5 = parse_annotations();
                  result5 = result5 !== null ? result5 : "";
                  if (result5 !== null) {
                    pos2 = pos;
                    result6 = parse_newline();
                    if (result6 !== null) {
                      result7 = parse_goalbody();
                      if (result7 !== null) {
                        result6 = [result6, result7];
                      } else {
                        result6 = null;
                        pos = pos2;
                      }
                    } else {
                      result6 = null;
                      pos = pos2;
                    }
                    result6 = result6 !== null ? result6 : "";
                    if (result6 !== null) {
                      result0 = [result0, result1, result2, result3, result4, result5, result6];
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, depth, evidence, anno, body) {
        		var desc = (body == "") ? "" : body[1].desc;
        		var notes = (body == "") ? "" : body[1].notes;
        		return new _PEG.CaseModel(evidence, null, null, _PEG.CaseType[evidence[0]], anno, desc, notes);
        	})(pos0, result0[0], result0[3], result0[5], result0[6]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_evidencenodes() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_evidencenode();
        if (result0 !== null) {
          result1 = [];
          pos2 = pos;
          result2 = parse_newline();
          result2 = result2 !== null ? result2 : "";
          if (result2 !== null) {
            result3 = parse_evidencenode();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos2;
            }
          } else {
            result2 = null;
            pos = pos2;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos2 = pos;
            result2 = parse_newline();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_evidencenode();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos2;
              }
            } else {
              result2 = null;
              pos = pos2;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, head, tail) {
        		var res = [head];
        		for (var i in tail) {
        			res.push(tail[i][1]);
        		}
        		return res;
        	})(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_strategynode() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_strategynode_();
        if (result0 !== null) {
          pos2 = pos;
          result1 = parse_newline();
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result2 = parse_contextnodes();
            if (result2 !== null) {
              result1 = [result1, result2];
            } else {
              result1 = null;
              pos = pos2;
            }
          } else {
            result1 = null;
            pos = pos2;
          }
          if (result1 !== null) {
            pos2 = pos;
            result2 = parse_newline();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_goalnodes();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos2;
              }
            } else {
              result2 = null;
              pos = pos2;
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, node, contextnodes, goalnodes) {
        		node.Children = node.Children.concat(contextnodes[1]);
        		node.Children = node.Children.concat(goalnodes[1]);
        		return node;
        	})(pos0, result0[0], result0[1], result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          pos1 = pos;
          result0 = parse_strategynode_();
          if (result0 !== null) {
            pos2 = pos;
            result1 = parse_newline();
            result1 = result1 !== null ? result1 : "";
            if (result1 !== null) {
              result2 = parse_contextnodes();
              if (result2 !== null) {
                result1 = [result1, result2];
              } else {
                result1 = null;
                pos = pos2;
              }
            } else {
              result1 = null;
              pos = pos2;
            }
            if (result1 !== null) {
              result0 = [result0, result1];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
          if (result0 !== null) {
            result0 = (function(offset, node, contextnodes) {
          		node.Children = node.Children.concat(contextnodes[1]);
          		return node;
          	})(pos0, result0[0], result0[1]);
          }
          if (result0 === null) {
            pos = pos0;
          }
          if (result0 === null) {
            pos0 = pos;
            pos1 = pos;
            result0 = parse_strategynode_();
            if (result0 !== null) {
              pos2 = pos;
              result1 = parse_newline();
              result1 = result1 !== null ? result1 : "";
              if (result1 !== null) {
                result2 = parse_goalnodes();
                if (result2 !== null) {
                  result1 = [result1, result2];
                } else {
                  result1 = null;
                  pos = pos2;
                }
              } else {
                result1 = null;
                pos = pos2;
              }
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, node, goalnodes) {
            		node.Children = node.Children.concat(goalnodes[1]);
            		return node;
            	})(pos0, result0[0], result0[1]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            if (result0 === null) {
              pos0 = pos;
              result0 = parse_strategynode_();
              if (result0 !== null) {
                result0 = (function(offset, node) {
              		return node;
              	})(pos0, result0);
              }
              if (result0 === null) {
                pos = pos0;
              }
            }
          }
        }
        return result0;
      }
      
      function parse_strategynode_() {
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_nodedepth();
        if (result0 !== null) {
          result1 = (function(offset, depth) { return depth == _PEG.currentParsingLevel; })(pos, result0) ? "" : null;
          if (result1 !== null) {
            result2 = parse_whitespace();
